<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey_card">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_700"
            android:elevation="4dp"
            android:theme="@style/Theme.AppCompat.DayNight"
            app:popupTheme="@style/Theme.AppCompat.DayNight"
            android:id="@+id/toolbar"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/grey_dark">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="15dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                app:srcCompat="@drawable/fiora_0"
                                android:scaleType="fitXY"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_alignParentStart="true"
                                app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_baseline_favorite_24"
                                android:layout_gravity="end"
                                android:layout_marginEnd="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_alignParentEnd="true"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp"
                        app:cardUseCompatPadding="true"
                        app:cardBackgroundColor="@color/grey_card">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="10dp">
                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="24sp"
                                android:paddingStart="10dp"
                                android:text="Fiora"
                                android:textColor="@color/white"
                                android:layout_marginBottom="10dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_baseline_star_24"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_baseline_star_24"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_baseline_star_24"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_baseline_star_24"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_baseline_star_24"/>
                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="5.0 (Difficulty)"
                                    android:textColor="@color/white"
                                    android:layout_marginTop="3dp"
                                    android:layout_marginStart="2dp"/>
                            </LinearLayout>
                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/fiora_story"
                                android:textColor="@color/white"
                                android:layout_marginBottom="15dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="15dp"
                                android:layout_marginTop="15dp"/>
                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Role"
                                android:textColor="@color/white"
                                android:layout_marginStart="10dp"/>
                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/fiora_role"
                                android:textColor="@color/white_blur"
                                android:layout_marginStart="10dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="15dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="15dp"
                                    android:layout_weight="0.5">

                                    <TextView
                                        android:id="@+id/textView6"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="Build"
                                        android:textColor="@color/white"
                                        android:layout_marginStart="10dp" />
                                    <TextView
                                        android:id="@+id/textView7"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/fiora_build"
                                        android:textColor="@color/white"
                                        android:layout_marginStart="10dp"
                                        android:textSize="24sp"/>
                                </LinearLayout>
                                <Button
                                    android:id="@+id/button"
                                    android:layout_width="300dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:text="New Build"
                                    android:backgroundTint="@color/purple_700"
                                    android:textAllCaps="false"
                                    android:layout_marginEnd="15dp"
                                    android:layout_gravity="center_vertical"/>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/grey_card"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Other Champions"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="15dp"/>
                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/rvChamp">

                            </androidx.recyclerview.widget.RecyclerView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:background="@color/grey_card"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/draw_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>